@@ -233,7 +233,8 @@ static php_stream_wrapper_ops php_stdio_wops = {
 	NULL, /* stat */
 	NULL, /* opendir */
 	"PHP",
-	NULL /* unlink */
+	NULL, /* unlink */
+	NULL  /* rename */
 };
 
 php_stream_wrapper php_stream_php_wrapper =	{
